mobile panel toggle svg align fix

--- a/src/scss/layout/_masthead.scss
+++ b/src/scss/layout/_masthead.scss
@@ -427,6 +427,8 @@
 
 	svg {
 		background-color: $anchor-color;
+		margin-left: auto;
+		margin-right: auto;
 	}
 
 	&[aria-expanded="true"] {
